updates and making some changes on all the DataBaseRepository.kt and viewModelFactory.kt and build fragment_give_aways.xml and activity_main.xml and made some changes

--- a/app/src/main/res/layout/base_fragment.xml
+++ b/app/src/main/res/layout/base_fragment.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/baseFragment"
     tools:context=".Hilt_MainActivity">
 
 
@@ -21,12 +23,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="48dp"
-        android:text="PS4"
+        android:text="@string/ps4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.419"
+        app:layout_constraintHorizontal_bias="0.431"
         app:layout_constraintStart_toEndOf="@+id/move_to_pc"
-        app:layout_constraintTop_toBottomOf="@+id/giveaways_recycler" />
+        app:layout_constraintTop_toBottomOf="@+id/giveaways_recycler"
+        app:layout_constraintVertical_bias="0.501" />
 
     <Button
         android:id="@+id/move_to_pc"
@@ -34,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="68dp"
         android:layout_marginBottom="48dp"
-        android:text="PC"
+        android:text="@string/pc"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/giveaways_recycler" />
